--- a/exercise/show_images.ipynb
+++ b/exercise/show_images.ipynb
@@ -10,8 +10,8 @@
     "import os\n",
     "\n",
     "# 현재 파이썬 세션에서만 유효\n",
-    "sys.path.append(r'C:\\source\\kamp_ex')\n",
-    "from sixtick import *\n",
+    "# sys.path.append(r'C:\\source\\kamp_ex')\n",
+    "\n",
     "\n",
     "# 이미지가 저장된 폴더 경로\n",
     "folder_path = r'C:\\Users\\hungh\\Downloads\\Dataset_품질 이상탐지 진단(크로메이트) AI 데이터셋\\data\\resized\\학습\\불량'  # 여기에 폴더 경로를 입력하세요.\n",
@@ -48,6 +48,41 @@
     "\n",
     "# 모든 창을 닫습니다.\n",
     "cv.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['c:\\\\source\\\\kamp_ex\\\\exercise',\n",
+       " 'c:\\\\source\\\\kamp_ex\\\\exercise',\n",
+       " 'C:\\\\source\\\\sixtick',\n",
+       " 'C:\\\\Users\\\\hungh\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python37\\\\python37.zip',\n",
+       " 'C:\\\\Users\\\\hungh\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python37\\\\DLLs',\n",
+       " 'C:\\\\Users\\\\hungh\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python37\\\\lib',\n",
+       " 'C:\\\\Users\\\\hungh\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python37',\n",
+       " 'c:\\\\Users\\\\hungh\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python37\\\\py3_7_9_tfgpu',\n",
+       " '',\n",
+       " 'c:\\\\Users\\\\hungh\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python37\\\\py3_7_9_tfgpu\\\\lib\\\\site-packages',\n",
+       " 'c:\\\\Users\\\\hungh\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python37\\\\py3_7_9_tfgpu\\\\lib\\\\site-packages\\\\win32',\n",
+       " 'c:\\\\Users\\\\hungh\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python37\\\\py3_7_9_tfgpu\\\\lib\\\\site-packages\\\\win32\\\\lib',\n",
+       " 'c:\\\\Users\\\\hungh\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python37\\\\py3_7_9_tfgpu\\\\lib\\\\site-packages\\\\Pythonwin',\n",
+       " 'c:\\\\Users\\\\hungh\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python37\\\\py3_7_9_tfgpu\\\\lib\\\\site-packages\\\\IPython\\\\extensions',\n",
+       " 'C:\\\\Users\\\\hungh\\\\.ipython']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.path"
    ]
   }
  ],
