--- a/readme.ipynb
+++ b/readme.ipynb
@@ -25,6 +25,7 @@
     "### 데이터 저작권 \n",
     "- E-mail : kamp@kaist.ac.kr\n",
     "- 중소벤처기업부, Korea AI Manufacturing Platform(KAMP), 품질 이상탐지, 진단(크로메이트) AI 데이터셋, KAIST(㈜에이비에이치, ㈜임픽스), 2021.12.27., www.kamp-ai.kr\n",
+    "![alt text](image-2.png)\n",
     "***\n",
     "### 프로젝트 일정\n",
     "1. [x] github 에 프로젝트 생성 20240821\n",
@@ -40,22 +41,30 @@
     "- 해당 과제를 수행하여 python기반 opencv와 tensorflow를 익히는 것에 중점을 두었다\n",
     "- 학습 데이터셋은 구하기가 어려워 고르지 않고 처음 얻은 것으로 진행 하였음\n",
     "- 부트 캠프 취지에 맞게 학습 데이터셋은 학원측에서 제공하였으면 하는 아쉬움이 있다\n",
+    "- 딥러닝 -> 평가 -> 고도화(데이터 증강 및 전처리) -> 실시간 학습 및 평가\n",
     "***\n",
     "### progress\n",
     "1. github 생성\n",
     "2. 개발환경 구축 및 git 연동\n",
-    ">- 개발언어 : python 3.8 (opencv, tensorflow\n",
+    ">- 개발언어 : python 3.7.9 (opencv, tensorflow, scikit-learn, pandas, numpy, seaborn\n",
     ">- 개발도구 : visual studio code\n",
     ">- 개발환경 : window 11 pro 64bit, i7-11700F, RAM 16G, GeForce RTX 3060\n",
     "3. 데이터 분석 및 전처리\n",
-    ">- 성격 : 비정형 데이터(이미지), 지도학습(양품과 불량품의 사진이 구분되어 있다), 소량의 지저분한 이미지\n",
-    ">- 현장가정 : 직접 현장과 접촉해서 진행하는 것이 아님. 제품 표면 확인가능 방향은 위, 아래 (좌,우) , 정상이미지는 한쪽(왼쪽)만 있다\n",
+    ">- 성격 : 비정형 데이터(이미지), 지도학습(양품과 불량품의 사진이 구분되어 있다), 소량의 지저분한 이미지. 양품 1378장, 불량품 74장\n",
+    ">- 현장가정 : 직접 현장과 접촉해서 진행하는 것이 아님. 제품 표면 확인가능 방향은 위, 아래 (좌,우)이지만 정상이미지는 한쪽(왼쪽)만 있다. 아마도 데이터 증강 한듯함\n",
     "> ![alt text](image.png)\n",
     ">*** \n",
-    ">- 불량가정 : 오염 및 양생 불량 두가지가 있다고 가정하였음\n",
+    ">- 불량가정 : 오염 및 양생 불량 두가지가 있다고 가정하였음, 불량이미지 학습도 정상이미지와 같은 방향만 쓰도록 하겠음.\n",
     ">\n",
     "> ![alt text](image-1.png)\n",
-    ">- 전처리 : 그레이스케일링, 양품 or 불량품 레이블, 특성 추출, 군집 확인\n",
+    ">- 엣지검출 테스트 : 오염 부분이 드러나지 않음. 적용안함\n",
+    ">\n",
+    "> ![alt text](image-3.png)\n",
+    ">- 그레이스케일 테스트 : \n",
+    ">\n",
+    "> ![alt text](image-4.png)\n",
+    ">- 전처리 : 양품 or 불량품 레이블, 특성 추출, 군집 확인, 데이터 증강\n",
+    ">- 딥러닝 : \n",
     ">- 시각화 : \n"
    ]
   }
