--- a/readme.ipynb
+++ b/readme.ipynb
@@ -60,12 +60,43 @@
     ">- 엣지검출 테스트 : 오염 부분이 드러나지 않음. 적용안함\n",
     ">\n",
     "> ![alt text](image-3.png)\n",
-    ">- 그레이스케일 테스트 : \n",
+    ">- 그레이스케일 테스트 : 특징이 사라지지 않고 차원이 축소됨. 720, 480. \n",
     ">\n",
     "> ![alt text](image-4.png)\n",
-    ">- 전처리 : 양품 or 불량품 레이블, 특성 추출, 군집 확인, 데이터 증강\n",
-    ">- 딥러닝 : \n",
-    ">- 시각화 : \n"
+    ">- 전처리 : 양품 or 불량품 레이블, (특성 추출 및 군집 확인 : tensorflow), (데이터 증강 : 실시간 추가)\n",
+    "***\n",
+    "4. 딥러닝\n",
+    ">- 장비의 한계. 많은 이미지를 한꺼번에 학습시킬시에 커널이 죽음.\n",
+    ">- 이미지 한개씩 증강 시키면서 반복 학습 시킴\n",
+    ">\n",
+    "> 1 ~ 50회 학습\n",
+    "> ![alt text](image-5.png)\n",
+    ">\n",
+    "> 51 ~ 100회 학습\n",
+    "> ![alt text](image-6.png)\n",
+    ">\n",
+    "> 101 ~ 150회 학습\n",
+    ">- 1차 시도때에는 100회 이상부터 안정화 되었는데 2차 시도때에는 50회 부터 안정화 되었음. (확률적으로 특성을 잘 찾을때가 있는 듯)\n",
+    "***\n",
+    "5. 검증\n",
+    "- 간단하게 학습용으로 진행해서 그런지 정확도가 아주 잘 나온다\n",
+    ">\n",
+    "> ![alt text](image-7.png)\n",
+    ">\n",
+    "> ![alt text](image-8.png)\n",
+    ">\n",
+    "> ![alt text](image-9.png)\n",
+    "***\n",
+    "6. 느낀점\n",
+    "- 인공지능에 엄청난 컴퓨팅 자원과 전력이 소모된다는걸 어렴풋이 느꼈음\n",
+    "- 잊고 지나갈 딥러닝 기술을 복습 했다는 점이 좋았음\n",
+    "- 부트 캠프인데 연계 기업들이 다 망한듯. 풀스택이나 해야할것 같다\n",
+    "- 불량 검출에 쓸 이미지는 확보는 제품 위치가 고정적이고 조명도 일정한 곳에서 하는게 맞는것 같다.\n",
+    "***\n",
+    "7. 차후 확장 계획\n",
+    "- 라즈베리파이에 카메라 연결\n",
+    "- 실시간으로 서버로 이미지 전송\n",
+    "- 실시간 검증 및 학습\n"
    ]
   }
  ],
