--- a/exercise/deep_learning.ipynb
+++ b/exercise/deep_learning.ipynb
@@ -286,7 +286,7 @@
     "\n",
     "# plt.ion()  # Interactive 모드를 켬 (실시간 업데이트)\n",
     "# fig, ax = plt.subplots(1, 1, figsize=(10, 5))\n",
-    "repeat = 200\n",
+    "repeat = 50\n",
     "\n",
     "for i in range(repeat):\n",
     "    x_train, y_train = get_train_data_kemp()\n",
@@ -370,6 +370,57 @@
    "outputs": [],
    "source": [
     "models.load_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d (Conv2D)             (None, 718, 478, 32)      320       \n",
+      "                                                                 \n",
+      " max_pooling2d (MaxPooling2D  (None, 359, 239, 32)     0         \n",
+      " )                                                               \n",
+      "                                                                 \n",
+      " conv2d_1 (Conv2D)           (None, 357, 237, 64)      18496     \n",
+      "                                                                 \n",
+      " max_pooling2d_1 (MaxPooling  (None, 178, 118, 64)     0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " conv2d_2 (Conv2D)           (None, 176, 116, 128)     73856     \n",
+      "                                                                 \n",
+      " max_pooling2d_2 (MaxPooling  (None, 88, 58, 128)      0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " conv2d_3 (Conv2D)           (None, 86, 56, 128)       147584    \n",
+      "                                                                 \n",
+      " max_pooling2d_3 (MaxPooling  (None, 43, 28, 128)      0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " flatten (Flatten)           (None, 154112)            0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 720)               110961360 \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 1)                 721       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 111,202,337\n",
+      "Trainable params: 111,202,337\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
    ]
   },
   {
