--- a/exercise/deep_learning_vgg16.ipynb
+++ b/exercise/deep_learning_vgg16.ipynb
@@ -2,34 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_9\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
       " vgg16 (Functional)          (None, 22, 15, 512)       14714688  \n",
       "                                                                 \n",
-      " flatten_8 (Flatten)         (None, 168960)            0         \n",
+      " flatten (Flatten)           (None, 168960)            0         \n",
       "                                                                 \n",
-      " dense_21 (Dense)            (None, 330)               55757130  \n",
+      " dense (Dense)               (None, 330)               55757130  \n",
       "                                                                 \n",
-      " dropout_13 (Dropout)        (None, 330)               0         \n",
+      " dropout (Dropout)           (None, 330)               0         \n",
       "                                                                 \n",
-      " dense_22 (Dense)            (None, 165)               54615     \n",
+      " dense_1 (Dense)             (None, 165)               54615     \n",
       "                                                                 \n",
-      " dropout_14 (Dropout)        (None, 165)               0         \n",
+      " dropout_1 (Dropout)         (None, 165)               0         \n",
       "                                                                 \n",
-      " dense_23 (Dense)            (None, 1)                 166       \n",
+      " dense_2 (Dense)             (None, 2)                 332       \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 70,526,599\n",
-      "Trainable params: 55,811,911\n",
+      "Total params: 70,526,765\n",
+      "Trainable params: 55,812,077\n",
       "Non-trainable params: 14,714,688\n",
       "_________________________________________________________________\n"
      ]
@@ -51,10 +51,10 @@
     "model.add(layers.Dropout(0.5)) # 드롭아웃 50%\n",
     "model.add(layers.Dense(330//2, activation='relu'))\n",
     "model.add(layers.Dropout(0.1)) # 드롭아웃 10%\n",
-    "model.add(layers.Dense(1, activation='sigmoid'))  # 이진 분류이므로 sigmoid 사용\n",
+    "model.add(layers.Dense(2, activation='softmax'))  #vgg가 분류인가? # 이진 분류이므로 sigmoid 사용\n",
     "# 모델 컴파일\n",
     "model.compile(optimizer='adam',\n",
-    "              loss='binary_crossentropy',\n",
+    "              loss='sparse_categorical_crossentropy',\n",
     "              metrics=['accuracy'])\n",
     "\n",
     "model.summary()\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,8 +71,17 @@
      "output_type": "stream",
      "text": [
       "Found 1152 images belonging to 2 classes.\n",
-      "Found 1152 images belonging to 2 classes.\n",
-      "1152/1152 [==============================] - 144s 125ms/step - loss: 0.5892 - accuracy: 0.9470 - val_loss: 0.1099 - val_accuracy: 0.9644\n"
+      "Found 290 images belonging to 2 classes.\n",
+      "Epoch 1/5\n",
+      "1152/1152 [==============================] - 71s 61ms/step - loss: 0.1808 - accuracy: 0.9566 - val_loss: 0.1934 - val_accuracy: 0.9517\n",
+      "Epoch 2/5\n",
+      "1152/1152 [==============================] - 71s 62ms/step - loss: 0.1799 - accuracy: 0.9566 - val_loss: 0.1938 - val_accuracy: 0.9517\n",
+      "Epoch 3/5\n",
+      "1152/1152 [==============================] - 70s 61ms/step - loss: 0.1805 - accuracy: 0.9566 - val_loss: 0.1936 - val_accuracy: 0.9517\n",
+      "Epoch 4/5\n",
+      "1152/1152 [==============================] - 71s 62ms/step - loss: 0.3388 - accuracy: 0.9557 - val_loss: 0.1940 - val_accuracy: 0.9517\n",
+      "Epoch 5/5\n",
+      "1152/1152 [==============================] - 71s 62ms/step - loss: 0.1794 - accuracy: 0.9566 - val_loss: 0.1935 - val_accuracy: 0.9517\n"
      ]
     }
    ],
@@ -107,14 +116,14 @@
     "test_datagen = ImageDataGenerator(rescale=1./255)\n",
     "\n",
     "test_generator = test_datagen.flow_from_directory(\n",
-    "       r'C:\\source\\kamp_ex\\train',\n",
+    "       r'C:\\source\\kamp_ex\\test',\n",
     "       target_size=(720, 480),\n",
     "       batch_size=1,\n",
     "       class_mode='binary')\n",
     "\n",
     "history = model.fit(\n",
     "    train_generator,\n",
-    "    epochs=1,\n",
+    "    epochs=5,\n",
     "    validation_data=test_generator,\n",
     "#     validation_steps=10 \n",
     "    # callbacks=[early_stopping_callback]\n",
@@ -124,11 +133,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save('C:\\source\\learning_kamp.keras')"
+    "model.save('C:\\source\\learning_kamp_vgg16.keras')"
    ]
   },
   {
